--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -4,4 +4,10 @@
             @apply font-bold text-2xl
         }
     }
+    .text-outline {
+        @apply text-transparent;
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke-color: currentColor;
+        -webkit-text-stroke-width: .03em;
+    }
 }
